--- a/src/components/static/Image.module.css
+++ b/src/components/static/Image.module.css
@@ -1,45 +1,31 @@
-
-
-
-
-
-
-
-
-
-
-.wrapper{
+.wrapper {
   display: grid;
 }
 
-.img{
+.img {
   grid-area: 1/1;
   opacity: 0;
   transition: 0.2s;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   border: none;
   justify-self: center;
 }
 
-
-.skeleton{
+.skeleton {
   grid-area: 1/1;
   height: 100%;
   background-image: linear-gradient(90deg, #eee 0px, #fff 50%, #eee 100%);
   background-color: #eee;
   background-size: 200%;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   animation: skeleton 1.5s infinite linear;
 }
 
 @keyframes skeleton {
-  from{
+  from {
     background-position: 0px;
   }
-  to{
+  to {
     background-position: -200%;
   }
 }
-
-
-
